--- a/install-lemp.yml
+++ b/install-lemp.yml
@@ -1,10 +1,10 @@
----
 
- - name: Configure LEMP Stack 
+ - name: Configure WordPress on LEMP Stack 
+   hosts: all
    become: yes
 
    roles:
-   - mysql
-   - nginx
-   - php
-   - wordpress
+     - mysql
+     - nginx
+     - php
+     - wordpress
